# otus-cpp-basic

./: .gitignore  README.md
02.homework/source/: CMakeLists.txt  hello_world.cpp
03.homework/source/: CMakeLists.txt  check_value.cpp  check_value.h  guess_the_number.cpp  high_scores.cpp  high_scores.h  random_value.cpp  random_value.h
04.homework/: CMakeLists.txt
04.homework/include/: add.hpp  div.hpp  lexer.hpp  mul.hpp  number.hpp  parser.hpp  sub.hpp  variable.hpp
04.homework/src/: add.cpp  astnode.cpp  div.cpp  lexer.cpp  main.cpp  mul.cpp  number.cpp  parser.cpp  sub.cpp  variable.cpp
05.homework/: CMakeLists.txt
05.homework/include/: max.hpp  mean.hpp  min.hpp  statistics.hpp  std.hpp
05.homework/source/: max.cpp  mean.cpp  min.cpp  statistics.cpp  std.cpp
06.homework/: CMakeLists.txt
06.homework/include/: icontainer.hpp  my_container.hpp  my_forward_list.hpp  my_list.hpp
06.homework/source/: main.cpp
06.homework/test/: forward_list_tests.cpp  vector_tests.cpp
08.homework/: CMakeLists.txt  top_words.cpp  top_words_thread.cpp
